# ops-memory-agent

./: .gitignore  README.md  docker-compose.yml  hackathon_presentation.txt  requirements.txt
agent/: agent.py  pyproject.toml
agent/ops_memory_agent/: __init__.py  config.py  loop.py  tools.py
agent/ops_memory_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: chat.py  memory.py
backend/app/core/: config.py
backend/app/services/: __init__.py  groq.py  memory.py
backend/ops_memory_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/memory/recall/: route.ts
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/timeline/: page.tsx
frontend/components/: brand.tsx  ops-visual.tsx  route-preloader.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  scroll-area.tsx
frontend/lib/: memory.ts
scripts/: __init__.py  run_integration_tests.py  seed_memory.py
