[project]
name = "ops-memory-agent"
version = "0.1.0"
description = "LangChain agent loop for Ops Memory Agent"
requires-python = ">=3.11,<3.13"
dependencies = [
  "hindsight-client>=0.4.0",
  "httpx>=0.27.0",
  "langchain>=0.3.0,<1.0.0",
  "langchain-core>=0.3.0,<1.0.0",
  "langchain-groq>=0.2.0,<1.0.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
